Digital Clock & Alarm Implementation.

--- a/dom-practice.html
+++ b/dom-practice.html
@@ -19,8 +19,8 @@
     </button>
     <aside class="panel"> <!-- Panel de navegación -->
         <nav class="menu"><!-- Contenido menu -->
-            <a href="#seccion1">Section 1</a> <!-- Los id  -->
-            <a href="#seccion2">Section 2</a>
+            <a href="#seccion1">Digital Watch & Alarm</a> <!-- Los id  -->
+            <a href="#seccion2">Keyboard Events</a>
             <a href="#seccion3">Section 3</a>
             <a href="#seccion4">Section 4</a>
             <a href="#seccion5">Section 5</a>
@@ -28,10 +28,17 @@
     </aside>
     <main> <!-- Etiqueta de contenido principal -->
         <section id="seccion1" class="section">
-            <h2>Section 1</h2>
+            <h2>Digital Clock & Alarm</h2>
+            <div id="reloj"></div>
+            <div>
+                <button id="activar-reloj">Turn On Clock</button>
+                <button id="desactivar-reloj">Turn Off Clock</button>
+                <button id="activar-alarma">Turn On Alarm</button>
+                <button id="desactivar-alarma">Turn Off Alarm</button>
+            </div>
         </section>
         <section id="seccion2" class="section">
-            <h2>Section 2</h2>
+            <h2>Keyboard Events</h2>
         </section>
         <section id="seccion3" class="section">
             <h2>Section 3</h2>
