--- a/dom-practice.html
+++ b/dom-practice.html
@@ -39,6 +39,9 @@
         </section>
         <section id="seccion2" class="section">
             <h2>Keyboard Events</h2>
+            <article class="stage">
+                <div class="ball"></div>
+            </article>
         </section>
         <section id="seccion3" class="section">
             <h2>Section 3</h2>
