--- a/dom-practice.html
+++ b/dom-practice.html
@@ -21,7 +21,7 @@
         <nav class="menu"><!-- Contenido menu -->
             <a href="#seccion1">Digital Watch & Alarm</a> <!-- Los id  -->
             <a href="#seccion2">Keyboard Events</a>
-            <a href="#seccion3">Section 3</a>
+            <a href="#seccion3">Countdown</a>
             <a href="#seccion4">Section 4</a>
             <a href="#seccion5">Section 5</a>
         </nav>
@@ -44,7 +44,8 @@
             </article>
         </section>
         <section id="seccion3" class="section">
-            <h2>Section 3</h2>
+            <h2>Countdown</h2>
+            <div id="countdown"></div>
         </section>
         <section id="seccion4" class="section">
             <h2>Section 4</h2>
@@ -53,6 +54,7 @@
             <h2>Section 5</h2>
         </section>
     </main>
+    <button class="scroll-top-btn hidden">&#11014;</button> <!-- Botón de scroll hacía top. como es un boton que irá fijo no es necesario ponerlo adentro del main. -->
     <script src="./index_dom.js" type="module"></script>
 
 </body>
