--- a/dom-practice.html
+++ b/dom-practice.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-dark>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css"> <!-- Mandar a llamar la librecía hamburger css -->
     <link rel="stylesheet" href="./css/dom-practice.css">
 </head>
-<body>
+<body data-dark="">
     <header class="header">
         <h1>DOM Practice</h1>
     </header>
@@ -19,16 +19,21 @@
     </button>
     <aside class="panel"> <!-- Panel de navegación -->
         <nav class="menu"><!-- Contenido menu -->
-            <a href="#seccion1">Digital Watch & Alarm</a> <!-- Los id  -->
+            <a data-dark href="#seccion1">Digital Watch & Alarm</a> <!-- Los id  -->
             <a href="#seccion2">Keyboard Events</a>
             <a href="#seccion3">Countdown</a>
-            <a href="#seccion4">Section 4</a>
+            <a href="#seccion4">Responsive con JavaScript</a>
             <a href="#seccion5">Section 5</a>
+            <a href="#seccion6">Section 6</a>
+            <a href="#seccion7">Section 7</a>
+            <a href="#seccion8">Section 8</a>
+            <a href="#seccion9">Section 9</a>
+            <a href="#seccion10">Section 10</a>
         </nav>
     </aside>
     <main> <!-- Etiqueta de contenido principal -->
         <section id="seccion1" class="section">
-            <h2>Digital Clock & Alarm</h2>
+            <h2 data-dark>Digital Clock & Alarm</h2>
             <div id="reloj"></div>
             <div>
                 <button id="activar-reloj">Turn On Clock</button>
@@ -48,13 +53,31 @@
             <div id="countdown"></div>
         </section>
         <section id="seccion4" class="section">
-            <h2>Section 4</h2>
+            <h2>Responsive von JavaScript</h2>
+            <div id="youtube"></div>
+            <div id="gmaps"></div>
         </section>
         <section id="seccion5" class="section">
             <h2>Section 5</h2>
         </section>
+        <section id="seccion6" class="section">
+            <h2>Section 6</h2>
+        </section>
+        <section id="seccion7" class="section">
+            <h2>Section 7</h2>
+        </section>
+        <section id="seccion8" class="section">
+            <h2>Section 8</h2>
+        </section>
+        <section id="seccion9" class="section">
+            <h2>Section 9</h2>
+        </section>
+        <section id="seccion10" class="section">
+            <h2>Section 10</h2>
+        </section>
     </main>
     <button class="scroll-top-btn hidden">&#11014;</button> <!-- Botón de scroll hacía top. como es un boton que irá fijo no es necesario ponerlo adentro del main. -->
+    <button class="dark-theme-btn">🌙</button>
     <script src="./index_dom.js" type="module"></script>
 
 </body>
