--- a/dom-practice.html
+++ b/dom-practice.html
@@ -23,7 +23,7 @@
             <a href="#seccion2">Keyboard Events</a>
             <a href="#seccion3">Countdown</a>
             <a href="#seccion4">Responsive con JavaScript</a>
-            <a href="#seccion5">Section 5</a>
+            <a href="#seccion5">Responsive Tester</a>
             <a href="#seccion6">Section 6</a>
             <a href="#seccion7">Section 7</a>
             <a href="#seccion8">Section 8</a>
@@ -58,7 +58,21 @@
             <div id="gmaps"></div>
         </section>
         <section id="seccion5" class="section">
-            <h2>Section 5</h2>
+            <h2>Responsive Tester</h2>
+            <form id="responsive-tester">
+                <!-- name es el nombre de la variable en la que se almacena el valor que hayamos introducido. -->
+                <input name="direccion" type="url" placeholder="URL" required>
+                <br>
+                <input name="ancho" type="text" placeholder="Ancho" required>
+                <br>
+                <input name="alto" type="text" placeholder="Alto" required>
+                <br>
+                <!-- Ponemos botones. El primero es para enviar ago o sea inputs de tipo submit en este caso. -->
+                <input name="probar" type="submit" value="Probar">
+                <!-- el segundo botón es tipo común y corriente o sea type="button" -->
+                <input name="cerrar" type="button" value="Cerrar">
+                
+            </form>
         </section>
         <section id="seccion6" class="section">
             <h2>Section 6</h2>
