--- a/dom-practice.html
+++ b/dom-practice.html
@@ -24,7 +24,7 @@
             <a href="#seccion3">Countdown</a>
             <a href="#seccion4">Responsive con JavaScript</a>
             <a href="#seccion5">Responsive Tester</a>
-            <a href="#seccion6">Section 6</a>
+            <a href="#seccion6">Detección de Dispositivos (User Agent)</a>
             <a href="#seccion7">Section 7</a>
             <a href="#seccion8">Section 8</a>
             <a href="#seccion9">Section 9</a>
@@ -75,7 +75,8 @@
             </form>
         </section>
         <section id="seccion6" class="section">
-            <h2>Section 6</h2>
+            <h2>Detección de Dispositivos<br>(User Agent)</h2>
+            <div id="user-device"></div>
         </section>
         <section id="seccion7" class="section">
             <h2>Section 7</h2>
@@ -96,3 +97,5 @@
 
 </body>
 </html>
+
+
