--- a/dom-practice.html
+++ b/dom-practice.html
@@ -25,9 +25,9 @@
             <a href="#seccion4">Responsive con JavaScript</a>
             <a href="#seccion5">Responsive Tester</a>
             <a href="#seccion6">Detección de Dispositivos (User Agent)</a>
-            <a href="#seccion7">Section 7</a>
-            <a href="#seccion8">Section 8</a>
-            <a href="#seccion9">Section 9</a>
+            <a href="#seccion7">Detección de La Conexión</a>
+            <a href="#seccion8">Detección de la Cámara Web</a>
+            <a href="#seccion9">Geolocalización</a>
             <a href="#seccion10">Section 10</a>
         </nav>
     </aside>
@@ -79,13 +79,15 @@
             <div id="user-device"></div>
         </section>
         <section id="seccion7" class="section">
-            <h2>Section 7</h2>
+            <h2>Detección de la Conexión</h2>
         </section>
         <section id="seccion8" class="section">
-            <h2>Section 8</h2>
+            <h2>Detección de la Cámara Web</h2>
+            <video id="webcam"></video>
         </section>
         <section id="seccion9" class="section">
-            <h2>Section 9</h2>
+            <h2>Geolocalización</h2>
+            <div id="geolocation"></div>
         </section>
         <section id="seccion10" class="section">
             <h2>Section 10</h2>
