--- a/dom-practice.html
+++ b/dom-practice.html
@@ -28,7 +28,12 @@
             <a href="#seccion7">Detección de La Conexión</a>
             <a href="#seccion8">Detección de la Cámara Web</a>
             <a href="#seccion9">Geolocalización</a>
-            <a href="#seccion10">Section 10</a>
+            <a href="#seccion10">Filtros de Búsquedas</a>
+            <a href="#seccion10">Section 11</a>
+            <a href="#seccion10">Section 12</a>
+            <a href="#seccion10">Section 13</a>
+            <a href="#seccion10">Section 14</a>
+            <a href="#seccion10">Section 15</a>
         </nav>
     </aside>
     <main> <!-- Etiqueta de contenido principal -->
@@ -90,7 +95,49 @@
             <div id="geolocation"></div>
         </section>
         <section id="seccion10" class="section">
-            <h2>Section 10</h2>
+            <h2>Filtros de Búsqueda</h2>
+            <input type="search" placeholder="Buscar..." class="card-filter">
+            <article class="cards">
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/nature" alt="Nature">
+                    <figcaption>Nature</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/any" alt="Any">
+                    <figcaption>Any</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/tech" alt="Tech">
+                    <figcaption>Tech</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/animals" alt="Animals">
+                    <figcaption>Animals</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/people" alt="People">
+                    <figcaption>People</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/arch" alt="Arch">
+                    <figcaption>Arch</figcaption>
+                </figure>
+            </article>
+        </section>
+        <section id="seccion11" class="section">
+            <h2>Section 11</h2>
+        </section>
+        <section id="seccion12" class="section">
+            <h2>Section 12</h2>
+        </section>
+        <section id="seccion13" class="section">
+            <h2>Section 13</h2>
+        </section>
+        <section id="seccion14" class="section">
+            <h2>Section 14</h2>
+        </section>
+        <section id="seccion15" class="section">
+            <h2>Section 15</h2>
         </section>
     </main>
     <button class="scroll-top-btn hidden">&#11014;</button> <!-- Botón de scroll hacía top. como es un boton que irá fijo no es necesario ponerlo adentro del main. -->
@@ -99,5 +146,3 @@
 
 </body>
 </html>
-
-
