--- a/dom-practice.html
+++ b/dom-practice.html
@@ -29,7 +29,7 @@
             <a href="#seccion8">Detección de la Cámara Web</a>
             <a href="#seccion9">Geolocalización</a>
             <a href="#seccion10">Filtros de Búsquedas</a>
-            <a href="#seccion10">Section 11</a>
+            <a href="#seccion10">Sorteo Digital</a>
             <a href="#seccion10">Section 12</a>
             <a href="#seccion10">Section 13</a>
             <a href="#seccion10">Section 14</a>
@@ -125,7 +125,20 @@
             </article>
         </section>
         <section id="seccion11" class="section">
-            <h2>Section 11</h2>
+            <h2>Sorteo Digital</h2>
+            <ul class="players">
+                <li class="player">JavaScript</li>
+                <li class="player">PHP</li>
+                <li class="player">JAVA</li>
+                <li class="player">C</li>
+                <li class="player">Python</li>
+                <li class="player">Ruby</li>
+                <li class="player">Go</li>
+                <li class="player">Visual Basic</li>
+                <li class="player">Rust</li>
+                <li class="player">Perl</li>
+            </ul>
+            <button id="winner-btn">Obtener Ganador</button>
         </section>
         <section id="seccion12" class="section">
             <h2>Section 12</h2>
